[project]
name = "aiohttp-request-id-logging"
version = "0.0.8"
description = "Setup proper request id logging for your Aiohttp app"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["aiohttp", "logging"]
maintainers = [
  {name = "Petr Messner", email = "petr.messner@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "aiohttp",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "sentry-sdk>=2.66.0",
    "ty>=0.0.60",
]

[project.urls]
"Homepage" = "https://github.com/messa/aiohttp-request-id-logging"
"Bug Reports" = "https://github.com/messa/aiohttp-request-id-logging/issues"
"Source" = "https://github.com/messa/aiohttp-request-id-logging"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 150

[tool.ruff.lint.per-file-ignores]
# the examples intentionally import names that are only used in comments
# and docstrings
"examples/*" = ["F401"]

[tool.ruff.format]
quote-style = "double"
