[project]
name = "aiohttp-request-id-logging"
version = "1.0.0"
description = "Setup proper request id logging for your Aiohttp app"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["aiohttp", "logging"]
maintainers = [
  {name = "Petr Messner", email = "petr.messner@gmail.com" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Framework :: aiohttp",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = [
  "aiohttp",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "sentry-sdk>=2.66.0",
    "ty>=0.0.60",
]

[project.urls]
"Homepage" = "https://github.com/messa/aiohttp-request-id-logging"
"Bug Reports" = "https://github.com/messa/aiohttp-request-id-logging/issues"
"Source" = "https://github.com/messa/aiohttp-request-id-logging"

[build-system]
# setuptools>=77 is needed for the SPDX license expression and license-files
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
aiohttp_request_id_logging = ["py.typed"]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
# ruff's default rule set plus E501, so that line-length is enforced
# even on lines the formatter does not wrap (strings, comments)
select = ["E4", "E7", "E9", "F", "E501"]

[tool.ruff.lint.per-file-ignores]
# the examples intentionally import names that are only used in comments
# and docstrings
"examples/*" = ["F401"]

[tool.ruff.format]
quote-style = "double"
